# parsh

./: Makefile  README  TODO  configure.ac
src/: Makefile  Makefile.am  command.c  command.h  dgraph.c  dgraph.h  eval.c  eval.h  file.c  file.h  frontier.c  frontier.h  jobs.c  jobs.h  main.c  parse.c  parse.h  parser.c  parser.h  parsh.c  parsh.h  var.c  var.h
tests/: run-all  test-shell-commands
